[workspace.package]
authors = [
    "GORO Contributors <https://github.com/goro-network>",
    "GORO Core Developers <dev@goro.network>",
]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/goro-network/ecosystem-libraries"
version = "1.0.0-alpha.11"

[workspace]
resolver = "2"
members = ["crate-cv25519auth-actix", "crate-identities", "crate-logging"]

[patch.crates-io]
ss58-registry = { git = "https://github.com/goro-network/ss58-registry", rev = "30889d6" }

[workspace.dependencies]
# monorepo
goro-cv25519auth-actix = { path = "crate-cv25519auth-actix" }
goro-identities = { path = "crate-identities" }
goro-logging = { path = "crate-logging" }
# crates.io
actix-http = "3.4.0"
actix-web = { version = "4.4.0", default-features = false }
arrayvec = { version = "0.7.4", default-features = false, features = ["serde", "zeroize"] }
bitvec = { version = "1.0.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
bs58 = { version = "0.5.0", default-features = false }
bytes = { version = "1.5.0", default-features = false }
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
curve25519-dalek = { version = "4.1.1", default-features = false, features = [
    "digest",
    "ff",
    "group-bits",
    "rand_core",
] }
ed25519-dalek = { version = "2.0.0", default-features = false, features = [
    "digest",
    "fast",
    "rand_core",
    "signature",
    "zeroize",
] }
env_logger = { version = "0.10.0" }
futures = { version = "0.3.28", default-features = false }
getrandom = "0.2.10"
hex = { version = "0.4.3", default-features = false, features = ["serde"] }
itertools = { version = "0.11.0", default-features = false }
log = { version = "0.4.20", default-features = false, features = [
    "max_level_debug",
    "release_max_level_info",
    "serde",
] }
parity-scale-codec = { version = "3.6.5", default-features = false, features = [
    "bytes",
    "derive",
    "max-encoded-len",
    "serde",
] }
pbkdf2 = { version = "0.12.2", default-features = false, features = ["hmac", "sha2"] }
rand_core = "0.6.4"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
schnorrkel = { version = "0.11.3", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.8", default-features = false }
ss58-registry = { git = "https://github.com/goro-network/ss58-registry", default-features = false, rev = "30889d6" }
thiserror-no-std = "2.0.2"
zeroize = { version = "1.6.0", default-features = false, features = ["derive"] }
