[package]
name = "nagara-identities"
description = "nagara Network - Identity Library"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
arrayvec.workspace = true
blake2.workspace = true
bs58.workspace = true
ed25519-compact = { version = "2.0.6", default-features = false, features = [
    "opt_size",
    "random",
    "x25519",
] }
hex.workspace = true
nagara-mnemonic.workspace = true
parity-scale-codec.workspace = true
rand_core.workspace = true
schnorrkel.workspace = true
serde.workspace = true
sha2.workspace = true
ss58-registry.workspace = true
thiserror-no-std.workspace = true
zeroize.workspace = true

[dev-dependencies]
sp-core = "24.0.0"
rand_core = { workspace = true, features = ["std"] }
test-case = { version = "3.2.1", features = ["with-regex"] }

[features]
default = []
std = [
    "arrayvec/std",
    "blake2/std",
    "bs58/std",
    "ed25519-compact/std",
    "hex/std",
    "nagara-mnemonic/std",
    "parity-scale-codec/std",
    "rand_core/std",
    "schnorrkel/std",
    "serde/std",
    "sha2/std",
    "ss58-registry/std",
    "thiserror-no-std/std",
    "zeroize/std",
]
opt-aarch64 = ["std", "nagara-mnemonic/opt-aarch64", "zeroize/aarch64"]
