[package]
name = "nagara-logging"
description = "nagara Network - Logging"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
std = []
app = ["env_logger", "std"] # only use this for binary/app target
wasm32 = ["gloo-console"]   # wasm32-unknown-emscripten/wasm32-unknown-unknown

[dependencies]
env_logger = { workspace = true, optional = true }
gloo-console = { workspace = true, optional = true }
log.workspace = true
serde.workspace = true
