[package]
name = "nagara-mnemonic"
description = "nagara Network - English-only 12/15/18/21/24 Words Mnemonic (BIP39)"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
std = [
    "arrayvec/std",
    "bitvec/std",
    "parity-scale-codec/std",
    "pbkdf2/std",
    "rand_core/std",
    "serde/std",
    "sha2/std",
    "thiserror-no-std/std",
    "zeroize/std",
]
opt-aarch64 = ["std", "zeroize/aarch64"]

[dev-dependencies]
hex = { workspace = true, features = ["std"] }
sp-core = "24.0.0"
test-case = "3.2.1"
tiny-bip39 = "1.0.0"

[dependencies]
arrayvec.workspace = true
bitvec.workspace = true
parity-scale-codec.workspace = true
pbkdf2.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror-no-std.workspace = true
zeroize.workspace = true
